fix(FollowStyles): Replace z-index with variable for sticky tabs to enhance style consistency

--- a/src/views/Follow/styles.module.css
+++ b/src/views/Follow/styles.module.css
@@ -3,7 +3,7 @@
 
   position: sticky;
   top: var(--sm-top-nav-height);
-  z-index: 1;
+  z-index: var(--z-index-sticky-tabs);
   padding-top: var(--sp20);
   padding-right: var(--sp16);
   margin-right: calc(var(--sp16) * -1);
